@@ -124,6 +124,11 @@
             <version>${jackson.version}</version>
         </dependency>
         <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.yaml</groupId>
             <artifactId>snakeyaml</artifactId>
             <version>2.2</version>
@@ -190,6 +195,19 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.2.5</version>
+                <configuration>
+                    <argLine>
+                        --add-opens com.javascene.gradingfx/com.javascene.gradingfx.model=ALL-UNNAMED
+                        --add-opens com.javascene.gradingfx/com.javascene.gradingfx.util=ALL-UNNAMED
+                        --add-opens com.javascene.gradingfx/com.javascene.gradingfx.service=ALL-UNNAMED
+                        --add-reads com.javascene.gradingfx=ALL-UNNAMED
+                    </argLine>
+                </configuration>
             </plugin>
         </plugins>
     </build>
